--- a/index.css
+++ b/index.css
@@ -12,11 +12,18 @@
   .logo:hover {
     text-decoration: none;
   }
-  .nav-scroll {
+  .nav-scroller {
     position: relative;
     z-index: 2;
     height: 2.75rem;
     overflow-y: hidden;
+  }
+  
+  
+  .nav-scroller .nav-link {
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    font-size: .875rem;
   }
   .img {
     height: 100%;
@@ -37,6 +44,19 @@
   .space > .btn {
     border-radius: 2rem;
   }
+  .nav-scroller .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
   
  
   .last {
@@ -49,4 +69,4 @@
   .last p:last-child {
     margin-bottom: 0;
   }
-  c
+  
